<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tweet!</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="enter_tweet_here">Enter tweet here!</string>
    <string name="tweet">Tweet!</string>
    <string name="settings">Settings</string>
    <string name="compose">Compose</string>
    <string name="tweet_goes_here">Tweet goes here</string>
    <string name="time">time</string>
    <string name="handle">\@Handle</string>
    <string name="_280">280</string>
    <string name="what_s_happening">What\'s happening?</string>

</resources>