<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComposeActivity">

    <EditText
        android:id="@+id/etComposeTweet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:background="@null"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/what_s_happening"
        android:inputType="textLongMessage|textAutoCorrect|textMultiLine|textPersonName"
        android:singleLine="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPostTweet"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/selector_send_tweet"
        android:text="@string/tweet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etComposeTweet"
        app:layout_constraintTop_toBottomOf="@+id/etComposeTweet" />

    <TextView
        android:id="@+id/tvCharacterCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_280"
        android:textColor="@color/medium_green"
        app:layout_constraintBottom_toBottomOf="@+id/btnPostTweet"
        app:layout_constraintEnd_toStartOf="@+id/btnPostTweet"
        app:layout_constraintTop_toBottomOf="@+id/etComposeTweet" />
</android.support.constraint.ConstraintLayout>