<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTranslucent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground"
        android:clipToPadding="false"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="8dp">


            <ImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:color/black" />

            <TextView
                android:id="@+id/tvUserScreenName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/handle"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toStartOf="@+id/tvTimeStamp"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintStart_toEndOf="@+id/tvUserName"
                app:layout_constraintTop_toTopOf="@+id/ivProfileImage" />

            <TextView
                android:id="@+id/tvBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:autoLink="all"
                android:background="@android:color/transparent"
                android:text="@string/tweet_goes_here"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvUserName"
                app:layout_constraintTop_toBottomOf="@+id/tvUserScreenName" />

            <TextView
                android:id="@+id/tvTimeStamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:text="@string/time"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvUserScreenName" />

            <ImageButton
                android:id="@+id/ibReply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:onClick="onClickReply"
                android:padding="5dp"
                android:src="@drawable/ic_reply"
                android:tint="@color/reply_selector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
                app:layout_constraintTop_toBottomOf="@+id/ivMedia" />

            <ImageButton
                android:id="@+id/ibRetweet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:src="@drawable/ic_retweet"
                android:tint="@color/retweet_selector"
                app:layout_constraintBottom_toBottomOf="@+id/ibReply"
                app:layout_constraintStart_toEndOf="@+id/tvFavorite"
                app:layout_constraintTop_toTopOf="@+id/ibReply" />

            <ImageButton
                android:id="@+id/ibFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:src="@drawable/ic_favorite"
                android:tint="@color/favorite_selector"
                app:layout_constraintBottom_toBottomOf="@+id/ibReply"
                app:layout_constraintStart_toEndOf="@+id/ibReply"
                app:layout_constraintTop_toTopOf="@+id/ibReply" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRetweet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:text="30"
                app:layout_constraintBottom_toBottomOf="@+id/ibRetweet"
                app:layout_constraintStart_toEndOf="@+id/ibRetweet"
                app:layout_constraintTop_toTopOf="@+id/ibRetweet"
                app:layout_constraintVertical_bias=".5" />

            <TextView
                android:id="@+id/tvFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:text="20"
                app:layout_constraintBottom_toBottomOf="@+id/ibFavorite"
                app:layout_constraintStart_toEndOf="@id/ibFavorite"
                app:layout_constraintTop_toTopOf="@+id/ibFavorite" />

            <ImageView
                android:id="@+id/ivMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:minHeight="200dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBody"
                app:srcCompat="@drawable/ic_vector_photo" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
